# missilecommand

./: .gitignore  .ignore  ChangeLog.md  LICENSE  MANIFEST.in  README.md  TODO  main.py  notes.md  pyproject.toml
assets/: spritesheet.ase
assets/appimage/: AppRun  appimage-gen
assets/pyinstaller/: missilecommand.spec
src/mc/: __main__.py  components.py  config.py  entities.py  globals.py  highscoretable.py  launchers.py  sprite.py  systems.py  types.py  typing.py  utils.py
src/mc/demo/: __init__.py
src/mc/game/: __init__.py  briefing.py  debriefing.py  entities.py  gamestate.py  incoming.py  launchers.py  pause.py  prep.py  score.py  types.py  waves.py
src/mc/gameover/: __init__.py
src/mc/highscoreentry/: __init__.py
src/mc/highscores/: __init__.py
src/mc/splash/: __init__.py
src/mc/states/: game.py
src/mc/title/: __init__.py
src/missilecommand/: __main__.py  config.py  debug_layer.py  freeze.py  gamestate.py  highscoretable.py  launchers.py  shared.py  soundpool.py  systems.py  types.py  utils.py
src/missilecommand/assets/: demo.in
src/missilecommand/demo/: __init__.py
src/missilecommand/game/: __init__.py  briefing.py  debriefing.py  demoplayer.py  incoming.py  pause.py  score.py  waves.py
src/missilecommand/gameover/: __init__.py
src/missilecommand/highscoreentry/: __init__.py
src/missilecommand/highscores/: __init__.py
src/missilecommand/instructions/: __init__.py
src/missilecommand/splash/: __init__.py
support/appimage/: build.sh  missilecommand.desktop
support/pyinstaller/: build.bat  build.sh  main.py
(+1 files in other folders)
