[project]
name = "missilecommand"
description = "Missile Command"
version = "0.0.2"
readme = "README.md"

authors = [
    { name="Michael Lamertz", email="michael.lamertz@gmail.com" }
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries :: pygame",
]

license = "MIT"
license-files = ["LICENSE"]

dependencies = [
    "ddframework @ git+https://github.com/dickerdackel/ddframework",
    "pgcooldown",
    "pygame-ce",
    "rpeasings",
    "tinyecs",
]

[project.scripts]
missile = "missilecommand.__main__:main"

[tool.setuptools]
include-package-data = true

[project.urls]
homepage = "https://github.com/dickerdackel/missilecommand"
bugtracker = "https://github.com/DickerDackel/missilecommand/issues"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "-rA"
testpaths = [
    "tests",
]

[tool.cibuildwheel]
# Don't build for pypy
skip = "pp*"
build = ["cp310-*", "cp311-*", "cp312-*", "cp313-*", "cp314-*"]
